# 3DPhotoAndroidNative

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/i3d/native0701/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: 3d_results.h  debug_initInputData.h  debug_main.h  native-lib.cpp
app/src/main/cpp/include/: 1FileNameExtractor.h  1FrameReader.h  6Cubemap2Sphere.h  6CubemapCapturer.h  6PanoramaCapturer.h  6ShaderForCapturer.h  DProblem1.h  DProblem2.h  DeformableProblem.h  Frame.h  GenerateTriangles.h  Pers2PanoWarper.h  RProblem2.h  RProblem3.h  RigidProblem.h  RigidProblem1.h  Warper4Android.h  WarperEglManager.h  WarperGlesInitializer.h  WarperShader.h  WriteFbToObj.h  WriteFbToTxt.h  exportTriangles2Obj.h  floodFillWithoutHoles.h  genCompactTri.h  genFeatures.h  genGlobalByMst.h  genInitialGraph.h  genKeyFrames.h  genObjFromPano.h  genObjFromPixels.h  genRelativePoses.h  genSimplePolygonContours.h  genSimplifiedTri.h  genTwoLayerContents.h  i3d.h  initInputData.h  readData.h  stitchAllPanos.h  triangulateSimplePolygon.h  (+1 more)
app/src/main/cpp/include/learnopengl/: camera.h  mesh.h  model.h  shader.h
app/src/main/cpp/src/: 1FrameReader.cpp  6Cubemap2Sphere.cpp  6CubemapCapturer.cpp  6PanoramaCapturer.cpp  DProblem1.cpp  DProblem2.cpp  Pers2PanoWarper.cpp  RProblem2.cpp  RProblem3.cpp  Warper4Android.cpp  WarperEglManager.cpp  WarperGlesInitializer.cpp  genCompactTri.cpp  genFeatures.cpp  genGlobalByMst.cpp  genInitialGraph.cpp  genRelativePoses.cpp  genRoughGlobalGraph.cpp  genRts.cpp  genSimplifiedTri.cpp  genTwoLayerContents.cpp  initInputData.cpp  readData.cpp  stitchAllPanos.cpp  warpToPano.cpp
app/src/main/cpp/src_debug/: debug_Pers2PanoWarper.cpp  debug_XProblem.cpp  debug_export2Obj.cpp  debug_genCompactTri.cpp  debug_genFeatures.cpp  debug_genGlobalByMst.cpp  debug_genRelativePoses.cpp  debug_genSimplifiedTri.cpp  debug_iphoneCompact.cpp  debug_main.cpp  debug_stitchAllPanos.cpp
app/src/main/cpp/viewer/: Camera.h  Renderer.cpp  Renderer.h
app/src/main/java/i3d/native0701/: GLUtils.java  GLViewerActivity.java  MainActivity.java  MyGLViewer.java  ProcessTask.java
app/src/main/res/layout/: activity_glviewer.xml  activity_main.xml  my_spinner_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/i3d/native0701/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
